fabric/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bsi-cred-arre-web-pub
  name: bsi-cred-arre-web-pub
spec:
  ports:
    - name: http
      port: 3000
  selector:
    app: bsi-cred-arre-web-pub
  type: ClusterIP
  resources: {}
